--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
-
 /* Your CSS Code here. */
+button{
+	background:black;
+	font-color:white;
+	border-radius: 5px;
+}
+button:hover{
+	background:yellow;
+	font-color:black;
+	border-radius:30px;
+}
