--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
 /* Your CSS Code here. */
-button{
-	background:black;
-	font-color:white;
+#btn {
+	border: none;
+	background-color: black;
+	color: white;
 	border-radius: 5px;
-	border:none;
 }
-button:hover{
-	background:yellow;
-	font-color:black;
-	border-radius:30px;
+
+#btn:hover {
+	background-color: yellow;
+	color: black;
+	border-radius: 30px;
 }
+
